--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/app-rate": "^4.11.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/diagnostic": "^4.10.0",
@@ -36,15 +37,20 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-plugin-apprate": "^1.4.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.4.2",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-globalization": "^1.11.0",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-nativegeocoder": "^3.1.2",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -54,6 +60,7 @@
     "cordova.plugins.diagnostic": "^4.0.8",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
     "rxjs": "5.5.11",
@@ -86,7 +93,8 @@
       },
       "cordova-plugin-nativegeocoder": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-apprate": {}
     },
     "platforms": [
       "android"
