--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/location-accuracy": "^4.11.0",
     "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/network": "^4.11.0",
+    "@ionic-native/push": "^4.12.0",
     "@ionic-native/social-sharing": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
@@ -63,6 +64,7 @@
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
+    "phonegap-plugin-push": "^1.11.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -94,7 +96,10 @@
       "cordova-plugin-nativegeocoder": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-apprate": {}
+      "cordova-plugin-apprate": {},
+      "phonegap-plugin-push": {
+        "SENDER_ID": "609215899596"
+      }
     },
     "platforms": [
       "android"
