--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/app-rate": "^4.11.0",
+    "@ionic-native/braintree": "^4.12.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/diagnostic": "^4.10.0",
