--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@ionic-native/app-rate": "^4.11.0",
     "@ionic-native/braintree": "^4.12.0",
     "@ionic-native/camera": "^4.11.0",
-    "@ionic-native/core": "~4.10.0",
+    "@ionic-native/core": "^4.12.0",
     "@ionic-native/diagnostic": "^4.10.0",
     "@ionic-native/file": "^4.11.0",
     "@ionic-native/file-path": "^4.11.0",
     "@ionic-native/file-transfer": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
+    "@ionic-native/google-maps": "^4.9.1",
     "@ionic-native/image-picker": "^4.10.1",
     "@ionic-native/location-accuracy": "^4.11.0",
     "@ionic-native/native-geocoder": "^4.11.0",
@@ -48,6 +49,7 @@
     "cordova-plugin-filepath": "^1.4.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-globalization": "^1.11.0",
+    "cordova-plugin-googlemaps": "^2.3.11",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -100,8 +102,13 @@
       "cordova-plugin-apprate": {},
       "phonegap-plugin-push": {
         "SENDER_ID": "609215899596"
+      },
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCoOVpqRdbIwU4hNYWiDOuzdK6AeMjfuUs"
       }
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
