--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "~6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-apprate": "^1.4.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.1",
-    "cordova-plugin-facebook4": "^1.7.1",
+    "cordova-plugin-facebook4": "^1.10.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.4.2",
